# rabbitmq-sample

./: pyproject.toml  server.py
main/: client.py  server.py
pubsub/: consumer_1.py  consumer_2.py  producer.py
reply/: client.py  server.py
routing/: analytics_consumer.py  payments_consumer.py  producer.py
rpc/: client.py
